@@ -12,7 +12,27 @@
     public class RegisterConditionalTests
     {
         [TestMethod]
-        public void RegisterConditional_AllowOverridingRegistrations_NotSupported()
+        public void RegisterConditionalNonGeneric_AllowOverridingRegistrations_NotSupported()
+        {
+            // Arrange
+            var container = ContainerFactory.New();
+
+            container.Options.AllowOverridingRegistrations = true;
+
+            // Act
+            Action action = () => container.RegisterConditional(typeof(ILogger), typeof(NullLogger),
+                Lifestyle.Singleton, c => true);
+
+            // Assert
+            AssertThat.ThrowsWithExceptionMessageContains<NotSupportedException>(
+                "The making of conditional registrations is not supported when AllowOverridingRegistrations " +
+                "is set, because it is impossible for the container to detect whether the registration " +
+                "should replace a different registration or not.",
+                action);
+        }
+
+        [TestMethod]
+        public void RegisterConditionalOpenGeneric_AllowOverridingRegistrations_NotSupported()
         {
             // Arrange
             var container = ContainerFactory.New();
@@ -21,6 +41,26 @@
 
             // Act
             Action action = () => container.RegisterConditional(typeof(IGeneric<>), typeof(GenericType<>),
+                Lifestyle.Singleton, c => true);
+
+            // Assert
+            AssertThat.ThrowsWithExceptionMessageContains<NotSupportedException>(
+                "The making of conditional registrations is not supported when AllowOverridingRegistrations " +
+                "is set, because it is impossible for the container to detect whether the registration " +
+                "should replace a different registration or not.",
+                action);
+        }
+
+        [TestMethod]
+        public void RegisterConditionalOnClosedGeneric_AllowOverridingRegistrations_NotSupported()
+        {
+            // Arrange
+            var container = ContainerFactory.New();
+
+            container.Options.AllowOverridingRegistrations = true;
+
+            // Act
+            Action action = () => container.RegisterConditional(typeof(IGeneric<int>), typeof(GenericType<int>),
                 Lifestyle.Singleton, c => true);
 
             // Assert
@@ -45,8 +85,6 @@
 
             // Act
             container.Verify();
-
-            // Assert
         }
 
         [TestMethod]
@@ -92,7 +130,6 @@
             Assert.IsNotNull(actualImplementationType, "Predicate was not called");
             Assert.IsFalse(actualImplementationType.ContainsGenericParameter(), "ImplementationType should be a closed type");
         }
-      
         [TestMethod]
         public void RegisterOpenGeneric_TwoEquivalentImplementationsOfTheSameInterfaceWithValidPredicate_AppliesPredicate1()
         {
@@ -180,7 +217,7 @@
                 "GetInstance should fail because the framework should detect that more than one " +
                 "implementation of the requested service.");
         }
-        
+
         [TestMethod]
         public void RegisterOpenGeneric_TwoEquivalentImplementationsWithValidPredicate_UpdateHandledProperty()
         {
@@ -232,7 +269,7 @@
                 "Type ILogger has already been registered as conditional registration.",
                 action);
         }
-        
+
         [TestMethod]
         public void RegisterConditional_AfterAnUnconditionalRegistrationForTheSameServiceTypeHasBeenMade_ThrowsAnExpressiveException()
         {
@@ -240,7 +277,7 @@
             var container = ContainerFactory.New();
 
             container.Register<ILogger, ConsoleLogger>();
-            
+
             // Act
             Action action = () => container.RegisterConditional(typeof(ILogger), typeof(NullLogger), c => true);
 
@@ -249,7 +286,7 @@
                 "Type ILogger has already been registered as unconditional registration. For non-generic " +
                 "types, conditional and unconditional registrations can't be mixed.",
                 action);
-        }    
+        }
 
         [TestMethod]
         public void RegisterGeneric_ForUnconstraintedTypeAfterAConditionalRegistrationForTheSameServiceTypeHasBeenMade_ThrowsAnExpressiveException()
@@ -318,7 +355,7 @@
                 .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void RegisterConditionalGeneric_DoneTwiceConditionallyForTheExactSameImplementationType_ThrowsAnExpressiveException()
         {
@@ -328,7 +365,7 @@
             container.RegisterConditional(typeof(IGeneric<>), typeof(GenericType<>), Lifestyle.Singleton, c => false);
 
             // Act
-            Action action = () => container.RegisterConditional(typeof(IGeneric<>), typeof(GenericType<>), 
+            Action action = () => container.RegisterConditional(typeof(IGeneric<>), typeof(GenericType<>),
                 Lifestyle.Singleton, c => false);
 
             // Assert
@@ -341,7 +378,7 @@
                 .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void RegisterConditional_DoneTwiceConditionallyForTheExactSameImplementationType_ThrowsAnExpressiveException()
         {
@@ -404,7 +441,7 @@
                 .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void RegisterConditional_RegisteredSingletonWithPredicateTrue_InjectsSameInstanceInAllConsumers()
         {
@@ -534,7 +571,7 @@
                 .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void GetInstance_ConsumerDependingOnConditionalRegistrationsThatDoNotGetInjected_ThrowsExpectedExceptions()
         {
@@ -546,7 +583,7 @@
 
             // Act
             Action action = () => container.GetInstance<ServiceWithDependency<ILogger>>();
-            
+
             // Assert
             AssertThat.ThrowsWithExceptionMessageContains<ActivationException>(@"
                 2 conditional registrations for ILogger exist, but none of the supplied predicates returned 
@@ -567,7 +604,7 @@
             container.RegisterConditional<IPlugin, PluginImpl2>(Lifestyle.Singleton, c => !c.Handled);
 
             container.RegisterDecorator<IPlugin, PluginDecorator>(Lifestyle.Singleton);
-            
+
             // Act
             var decorator1 = container.GetInstance<ServiceWithDependency<IPlugin>>().Dependency;
             var decorator2 = container.GetInstance<ServiceWithDependency<IPlugin>>().Dependency;
@@ -707,7 +744,7 @@
                 .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void GetInstance_MultipleApplicableConditionalNonGenericRegistrations_ThrowsExpectedException()
         {
@@ -731,7 +768,7 @@
                .TrimInside(),
                action);
         }
-        
+
         [TestMethod]
         public void RegisterConditionalFactory_AllowOverridingRegistrations_NotSupported()
         {
@@ -792,7 +829,7 @@
             // Assert
             Assert.AreSame(a.Dependency, b.Dependency);
         }
-        
+
         [TestMethod]
         public void GetInstance_ConditionalSingletonWithMutlipleClosedMappingAtSameImplementationThroughFactory_InjectsSameInstanceForDifferentClosedVersions()
         {
@@ -815,7 +852,7 @@
                 "Since both dependencies are IntAndFloatGeneric<object> and it is registered as singleton " +
                 ", there should only be one single instance.");
         }
-        
+
         [TestMethod]
         public void RegisterConditionalFactory_PredicateContext_ServiceTypeIsClosedImplentation()
         {
@@ -839,7 +876,7 @@
             Assert.IsNotNull(actualServiceType, "Predicate was not called");
             Assert.IsFalse(actualServiceType.ContainsGenericParameter(), "ServiceType should be a closed type");
         }
-        
+
         [TestMethod]
         public void RegisterConditionalFactory_FactoryReturningOpenGenericType_WorksCorrectly()
         {
@@ -945,7 +982,7 @@
             // Assert
             Assert.IsTrue(predicateCalled);
         }
-        
+
         [TestMethod]
         public void RegisterConditionalFactory_PredicateReturningFalse_FactoryDoesNotGetCalled()
         {
@@ -978,7 +1015,7 @@
             // Assert
             Assert.IsTrue(predicateCalled);
         }
-        
+
         [TestMethod]
         public void RegisterConditionalFactory_TwoEquivalentImplementationsOfTheSameInterfaceWithOverlappingPredicate_ThrowsException2()
         {
@@ -1006,7 +1043,7 @@
                 "GetInstance should fail because the framework should detect that more than one " +
                 "implementation of the requested service.");
         }
-                
+
         [TestMethod]
         public void GetInstance_RegisterTypeFactoryReturningAPartialOpenGenericType_WorksLikeACharm()
         {
@@ -1029,13 +1066,13 @@
             // Assert
             AssertThat.IsInstanceOfType(typeof(OpenGenericWithUnresolvableArgument<string, double>), result);
         }
-        
+
         [TestMethod]
         public void GetInstance_WithClosedGenericServiceAndFactoryReturningIncompatibleClosedImplementation_FailsWithExpectedException()
         {
             // Arrange
             var container = new Container();
-            
+
             container.RegisterConditional(typeof(IOpenGenericWithPredicate<>),
                 c => typeof(OpenGenericWithPredicate1<string>),
                 Lifestyle.Transient,
@@ -1048,10 +1085,10 @@
             AssertThat.ThrowsWithExceptionMessageContains<ActivationException>(@"
                 The registered type factory returned type OpenGenericWithPredicate1<String> which
                 does not implement IOpenGenericWithPredicate<Object>"
-                .TrimInside(), 
+                .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void GetInstance_RegisterDecoratorWithFactoryReturningTypeWithMultiplePublicConstructors_ThrowsExceptedException()
         {
@@ -1059,7 +1096,7 @@
             string expectedMessage = "it should have only one public constructor";
 
             var container = new Container();
-            
+
             container.RegisterConditional(typeof(IOpenGenericWithPredicate<>),
                 c => typeof(OpenGenericWithPredicateWithMultipleCtors<>),
                 Lifestyle.Transient,
@@ -1091,16 +1128,16 @@
                 @"The registered type factory returned open generic type DisposableOpenGenericWithPredicate<T> 
                 while the registered service type IDisposable is not generic, making it impossible for a 
                 closed generic type to be constructed"
-                .TrimInside(), 
+                .TrimInside(),
                 action);
         }
-        
+
         [TestMethod]
         public void GetInstance_RegisterTypeWithFactoryReturningTypeWithUnresolvableArgument_ThrowsExceptedException()
         {
             // Arrange
             var container = new Container();
-            
+
             container.RegisterConditional(typeof(IOpenGenericWithPredicate<>),
                 c => typeof(OpenGenericWithUnresolvableArgument<,>),
                 Lifestyle.Transient,
@@ -1132,7 +1169,7 @@
             // Assert
             AssertThat.ThrowsWithExceptionMessageContains<InvalidOperationException>(
                 "The type factory delegate that was registered for service type " +
-                "IOpenGenericWithPredicate<T> returned null.", 
+                "IOpenGenericWithPredicate<T> returned null.",
                 action);
         }
 
@@ -1153,7 +1190,7 @@
             // Assert
             AssertThat.IsInstanceOfType(typeof(Logger<ServiceDependingOn<ILogger>>), logger);
         }
-        
+
         [TestMethod]
         public void GetInstance_ConditionalNonGenericRegistrationWithFactoryInjectedIntoMultipleConsumersAsSingleton_AlwaysInjectSameInstance()
         {
@@ -1178,7 +1215,7 @@
         {
             // Arrange
             var contexts = new List<PredicateContext>();
-            
+
             var container = new Container();
 
             container.Options.PropertySelectionBehavior = new InjectAllProperties();
@@ -1238,7 +1275,7 @@
             var registration = Lifestyle.Transient.CreateRegistration<NullLogger>(container);
 
             container.RegisterConditional(typeof(ILogger), registration, c => true);
-            
+
             // Act
             Action action = () => container.RegisterConditional(typeof(ILogger), registration, c => false);
 
