@@ -10,6 +10,8 @@ Version 3.1.3 (v3.1.3 RTM)
 		-[Core] Improved exception message when resolving unregistered collections. (fixes #204)
 
 	Bug fixes:
+		-[Core] Registration of conditional closed-generic types prevented when container allows
+		 overriding registrations. (fixes #216)
 
 
 Version 3.1.2 (v3.1.2 RTM) 2015-12-13
